Create bridge works + object human output